Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59175

QWindowContainer not supported on Android

    XMLWordPrintable

Details

    • Android
    • 2c9acfbec667878ce913fecda6361e7150b3a778

    Description

      It is very desirable to get QWindowContainer working in order to allow embedding OpenGL or Vulkan QWindows into widget UIs.

      https://codereview.qt-project.org/#/c/92070/ has the right idea but that won't directly solve the QWindowContainer case. Instead, the hole punching has to happen in the QWindowContainer widget itself.

      Attachments

        Issue Links

          Activity

            People

              lagocs Laszlo Agocs
              lagocs Laszlo Agocs
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: